# osakaOS

./: Makefile.emscripten  README_WEB.md  build_web.sh  converter.html  index.html  osakaOS.js  osakaOS.wasm  osakaOS.wasm.map  proxyserver.cjs  test.qcow2
dns/: CMakeLists.txt  README.md  README_BUILD.md  README_CPP.md  build.sh  package-lock.json  package.json  serve_on_nginx.html  test-dns-cpp.sh  test-dns.js
dns/cpp/src/: DnsPacket.cpp  DnsPacket.hpp  DnsServer.cpp  DnsServer.hpp  main.cpp  types.hpp
dns/cpp/web/: index.html
dns/data/: dns-overrides.json
dns/data/static/: test_dns_local.html
dns/src/: DnsServer.ts  index.ts  types.ts
include/: memorymanagement.h
include/app/: iframe.h  settings.h
include/filesys/: ofs.h
include/gui/: desktop.h
include/hardwarecommunication/: port.h
src/: cli.cc  gdt.cc  kernel.cc  kernel_web.cc  kernel_web_entry.cc  kernel_web_loop.cc  kernel_web_runner.cc  list.cc  memorymanagement.cc
src/app/: file_edit.cc  iframe.cc  settings.cc
src/drivers/: amd_am79c973_stub.cc  ata_stub.cc  cmos_stub.cc  keyboard_web.cc  mouse_web.cc  pit_web.cc  speaker_web.cc  vga_web.cc
src/filesys/: ofs.cc
src/gui/: desktop.cc  widget.cc  window.cc
src/hardwarecommunication/: interrupts_web.cc  pci_stub.cc  port_stub.cc
src/net/: arp.cc  icmp.cc
