cmake_minimum_required(VERSION 3.15)
project(dns-server-cpp VERSION 1.0.0 LANGUAGES CXX)

# Option for admin password (set at build time)
# Default password is "password" if not specified
if(NOT DEFINED ADMIN_PASSWORD)
    set(ADMIN_PASSWORD "password" CACHE STRING "Password for the domain overrides editor")
elseif(ADMIN_PASSWORD STREQUAL "" OR ADMIN_PASSWORD STREQUAL "OFF")
    set(ADMIN_PASSWORD "password" CACHE STRING "Password for the domain overrides editor" FORCE)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# Enable parallel builds
include(ProcessorCount)
ProcessorCount(N)
if(NOT N EQUAL 0)
    set(CMAKE_BUILD_PARALLEL_LEVEL ${N})
    message(STATUS "Using ${N} parallel build jobs")
endif()

# Use ccache if available for faster rebuilds
find_program(CCACHE_PROGRAM ccache)
if(CCACHE_PROGRAM)
    set(CMAKE_CXX_COMPILER_LAUNCHER ${CCACHE_PROGRAM})
    message(STATUS "Using ccache for faster compilation")
endif()

# Find required packages
find_package(Threads REQUIRED)

# Source files
set(SOURCES
    cpp/src/main.cpp
    cpp/src/DnsServer.cpp
    cpp/src/DnsPacket.cpp
)

# Create executable
add_executable(dns-server ${SOURCES})

# Use modern include directories (faster than global include_directories)
target_include_directories(dns-server PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/cpp/src)

# Link libraries
target_link_libraries(dns-server 
    PRIVATE 
    Threads::Threads
    ${CMAKE_DL_LIBS}
)

# JSON library (nlohmann/json - header-only)
# Use EXCLUDE_FROM_ALL to speed up initial configuration
include(FetchContent)
FetchContent_Declare(
    json
    GIT_REPOSITORY https://github.com/nlohmann/json.git
    GIT_TAG v3.11.2
)
FetchContent_MakeAvailable(json)
target_link_libraries(dns-server PRIVATE nlohmann_json::nlohmann_json)

# HTTP server library (cpp-httplib)
FetchContent_Declare(
    httplib
    GIT_REPOSITORY https://github.com/yhirose/cpp-httplib.git
    GIT_TAG v0.14.3
)
FetchContent_MakeAvailable(httplib)
target_link_libraries(dns-server PRIVATE httplib::httplib)

# Compiler-specific options
if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    # Use faster compilation flags in Debug mode
    target_compile_options(dns-server PRIVATE 
        $<$<CONFIG:Debug>:-Wall -Wextra -O0 -g>
        $<$<CONFIG:Release>:-Wall -Wextra -pedantic -O3>
        $<$<CONFIG:RelWithDebInfo>:-Wall -Wextra -O2 -g>
    )
    
    # Enable faster template instantiation
    target_compile_options(dns-server PRIVATE -ftemplate-backtrace-limit=0)
endif()

# Generate compile_commands.json for better IDE support and faster incremental builds
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Pass admin password to the code
target_compile_definitions(dns-server PRIVATE ADMIN_PASSWORD="${ADMIN_PASSWORD}")
message(STATUS "Admin password protection enabled (password: ${ADMIN_PASSWORD})")

# Installation
install(TARGETS dns-server DESTINATION bin)

